syntax = "proto3";

package types;

import "integration.proto";

option go_package = "github.com/sundae-party/api-server/pkg/apis/core/types";

service SunHandler {
    rpc Get (Sun) returns (Sun);
    rpc Create (Sun) returns (Sun);
    rpc Update (Sun) returns (Sun);
    rpc Delete (Sun) returns (Sun);

    rpc Watch (Sun) returns (stream Sun);
    rpc setValue (SetSunValueRequest) returns (Sun);
}

message SetSunValueRequest {
    string SunName = 1;
    string integrationName = 2;
    SunState value = 3;
}

message SunState {
	string nextRising = 1;
	string nextSetting = 2;
    string nextNoon = 5;
    string nextMidnight = 6;
    float elevation = 7;
    float azimuth = 8;
	enum State {
        above_horizon = 0;
        below_horizon = 1;
    };
    State state = 10;
}

message Sun {
    string name = 1;
    types.Integration integration = 2;
    string displayed_name = 4;
    SunState state = 6;
    string mutation = 9;
}